syntax = "proto3";

option go_package = "go.jclarke.tech/chord/dht_proto";

package dht_proto;

service DHT {
    rpc GetKey(GetKeyRequest) returns(GetKeyResponse);
    rpc SetKey(SetKeyRequest) returns (SetKeyResponse);
}

message Node {
    string address = 1;
}

message GetKeyRequest {
    string key = 1;
};

message GetKeyResponse {
    bytes value = 1;
    string key = 2;
    
    // An alternate node, if the node thinks that the request should be forwarded
    Node forwardNode = 3; 
};

message SetKeyRequest {
    string key = 1;
    bytes value = 2;

    // Transfer is for use when exiting the network, prevents redirections
    bool transfer = 3;
};

message SetKeyResponse{
    // An alternate node, if the node thinks that the request should be forwarded
    Node forwardNode = 1;
};